--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -21,13 +21,17 @@ block content
             span 
               a.link.link--black(href='#') Вернуться в корзину
 
-      .basket__body
+      form.form.basket__body(novalidate="novalidate")
         .basket__body-left
           include modules/basket/items-in-order
-          include modules/basket/basket-form
+          //- include modules/basket/basket-form
+          include modules/basket/basket-form-moscov
         
         .basket__body-right
           include modules/basket/total-cost
 
 block footer-popups
-  include modules/popups/show-on-map-popup        
+  include modules/popups/show-on-map-popup  
+
+block script
+  script(type='text/javascript', src='../../js/shops-map.js')        
