--- a/dev/modules/popups/checkout-popup.pug
+++ b/dev/modules/popups/checkout-popup.pug
@@ -1,3 +1,12 @@
-#checkout-popup.page-popup.mfp-hide
+#checkout-popup.page-popup.page-popup--checked.mfp-hide
   .page-popup-heading
-    .page-popup-title.uppercase ОФОРМИТЬ ЗАКАЗ
+    .page-popup-title.uppercase ВЫБРАТЬ ПУНКТ ВЫДАЧИ
+  .page-popup-body
+    .page-popup-body__card-block
+      #map
+    .page-popup-body__text-block Выбор магазина BRUSNIKA
+
+
+//- block script
+//-   //- script(type='text/javascript' src='../js/shops-map.js')  
+//-   script(type='text/javascript' src='shops-map.js')  
