правки от олега  authorization

--- a/dev/basket-moscow.pug
+++ b/dev/basket-moscow.pug
@@ -24,7 +24,8 @@ block content
       form.form.basket__body(novalidate="novalidate")
         .basket__body-left
           include modules/basket/items-in-order
-          include modules/basket/basket-form
+          //- include modules/basket/basket-form
+          include modules/basket/basket-form-moscov
         
         .basket__body-right
           include modules/basket/total-cost
