--- a/dev/modules/popups/change-password-popup.pug
+++ b/dev/modules/popups/change-password-popup.pug
@@ -5,13 +5,13 @@
     .tabs.form-tabs
       .tabs-heading.form-tabs-heading
         .form-tabs-heading-items
-          .tab-heading-item.active.form-tab-heading-item(data-tab='#form_email' data-tabs='.tab') Через E-mail
-          .tab-heading-item.form-tab-heading-item(data-tab='#form_phone' data-tabs='.tab') Через смс
+          .tab-heading-item.active.form-tab-heading-item(data-tab='#form_email' data-tabs='.tab') Войти через E-mail
+          .tab-heading-item.form-tab-heading-item(data-tab='#form_phone' data-tabs='.tab') Войти через смс
       .tabs-content.form-tabs-content
 
         #form_phone.tab-content-item.tab.show.form-tab-content-item
           .form-row
-            .page-popup-title--small Пожалуйста, введите вашномер, на который мы 
+            .page-popup-title--small Пожалуйста, введите ваш номер, на который мы 
                 | отправим смс скодом для восстановления пароля   
           .form-row
             label.form-label(for='auth_sms') Контактный телефон
