--- a/dev/modules/footer-popups.pug
+++ b/dev/modules/footer-popups.pug
@@ -10,6 +10,8 @@ include ./popups/tooltip-templates
 include ./popups/message-log-in
 include ./popups/change-password-popup
 include ./popups/registration
+include ./popups/nosms
+include ./popups/sms-cod-popup
 
 //- include ./popups/show-on-map-popup  
 include ./popups/checkout-popup 
