--- a/dev/scss/blocks/_form-tabs.scss
+++ b/dev/scss/blocks/_form-tabs.scss
@@ -31,7 +31,7 @@
 .form-tabs-heading .form-tabs-heading-items .form-tab-heading-item {
   width: 50%;
   padding-bottom: 15px;
-  border-bottom: 2px solid transparent;
+  border-bottom: 1px solid transparent;
   cursor: pointer;
   transition: 0.3s border-bottom-color cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
@@ -59,10 +59,10 @@
   align-items: flex-start;
   justify-content: space-between;
 
-  @media screen and (max-width:480px) {
-    flex-direction: column;
-    gap: 15px;
-  }
+  // @media screen and (max-width:480px) {
+  //   flex-direction: column;
+  //   gap: 15px;
+  // }
 
 }
 
@@ -77,7 +77,7 @@
 .form-group-inner .form-group-item--w32 {
   width: 32%;
 
-  @media screen and (max-width:480px) {
+  @media screen and (max-width:600px) {
     width: 100%;
   }
 }
