--- a/dev/modules/catalog-shops.pug
+++ b/dev/modules/catalog-shops.pug
@@ -1,8 +1,6 @@
-#catalog-shop-items
-  .catalog-items.row
+.catalog-items.item-shops
 
     each item in catalogShops
-      .col-12.col-md-6
         .item-shop 
           .item-shop-info
             .item-shop-title= item.name        
