--- a/dev/scss/blocks/_shop.scss
+++ b/dev/scss/blocks/_shop.scss
@@ -10,25 +10,47 @@
     }
 }
 
+.item-shops {
+    display: grid;
+    grid-template-columns: repeat(2, calc(100%/2));
+    gap: 20px;
+
+    @media screen and (max-width:768px) {
+        grid-template-columns: repeat(1, 100%);
+    }
+
+    @media screen and (max-width:480px) {
+        gap: 0;
+    }
+
+}
+
 .item-shop {
     border: 1px solid $color-gray-two;
     padding: 40px;
-    margin: 20px;
+    margin: 0;
 
     @media screen and (max-width:768px) {
         border: none;
         border-top: 1px solid $color-gray-two;
-        border-bottom: 1px solid $color-gray-two;
+        border-bottom: 1px solid transparent;
         padding: 20px;
         margin: 10px;
     }
 
-
+    @media screen and (max-width:480px) {
+        padding: 15px;
+        margin: 0;
+    }
 
     &-info {
         line-height: 20px;
         line-height: 25px;
         max-width: 340px;
+
+        @media screen and (max-width:480px) {
+            font-size: 12px;
+        }        
     }
 
     &-title {
@@ -36,11 +58,21 @@
         font-size: 18px;
         line-height: 25px;
         margin-bottom: 5px;
+
+        @media screen and (max-width:480px) {
+            font-size: 12px;
+            line-height: 20px;
+        }
     }
 
     &-phone {
         margin: 15px 0;
         font-weight: 600;
+
+        @media screen and (max-width:480px) {
+            font-size: 12px;
+            margin: 0;
+        }        
 
 
     }
@@ -51,7 +83,14 @@
     font-size: 36px;
     line-height: 46px;
     text-align: center;
+    margin-top: 46px;
     margin-bottom: 46px;
+
+    @media screen and(max-width:480px) {
+        font-size: 14px; 
+        text-align: left ;
+        margin: 0;
+    }
 }
 
 // сбрасываю отступы 
