--- a/dev/modules/filters/filter-shops.pug
+++ b/dev/modules/filters/filter-shops.pug
@@ -3,7 +3,7 @@ block variables
   - var mainPage = false
 
 
-.filters-block.d-block.d-lg-none
+.filters-block.filters-block-shops.d-block.d-lg-none
   .row.mobile-slider
     each item in shopsFilters
       a.filter-slider__shops-link(href=`${item.href}`)= item.name
