--- a/dev/modules/filters/filter-shops-map.pug
+++ b/dev/modules/filters/filter-shops-map.pug
@@ -2,19 +2,16 @@ block variables
   - var title = 'Mагазины'
   - var mainPage = false
 
-.filters-block
-  //- мобилка
-  .filters-row.d-block.d-lg-none
-    //- .filters-row__list
-    .filter-items.filters-list(data-params='{"slidesToShow": 10}')
-        +listShopFiltersMobile(shopsFilters)
-
-  //- десктоп        
-  .filters-row
-    .d-none.d-lg-block
+.filters-block.filters-block-shops.d-block.d-lg-none
+  .row.mobile-slider
+    each item in shopsFilters
+      a.filter-slider__shops-link(href=`${item.href}`)= item.name       
+.filters-row
+    .filters-row__list.d-none.d-lg-block
       +listShopFiltersDesktop('filters-list', shopsFilters)
 
-    ul.filters-list-small
+    div
+      ul.filters-list-small
         li
           a(href='shops.html') Список
         li
