--- a/dev/modules/filters/filter-shops.pug
+++ b/dev/modules/filters/filter-shops.pug
@@ -2,17 +2,14 @@ block variables
   - var title = 'Mагазины'
   - var mainPage = false
 
-
 .filters-block.filters-block-shops.d-block.d-lg-none
   .row.mobile-slider
     each item in shopsFilters
       a.filter-slider__shops-link(href=`${item.href}`)= item.name
 .filters-row
   .filters-row__list.d-none.d-lg-block
-    ul.filters-list
-      each item in shopsFilters
-        li.filter-slider__shops-list-link
-          a(href=`${item.href}`)= item.name
+    +listShopFiltersDesktop('filters-list', shopsFilters)
+
   div
     ul.filters-list-small
       li
