--- a/dev/scss/blocks/_filter.scss
+++ b/dev/scss/blocks/_filter.scss
@@ -103,6 +103,10 @@
     display: flex;
     text-transform: capitalize;
     margin-left: 30px;
+
+    @media screen and(max-width:480px) {
+        margin-right: 15px;
+    }
 }
 
 .filters-list-small li {
@@ -200,9 +204,11 @@
 .filter-slider__shops-list-link { 
     margin-left: 10px;
     margin-right: 10px;
+    padding: 0;
 
     @media screen and (max-width:480px) {
         margin-left: 7px;
         margin-right: 7px;
+        padding: 0;
     }
 }
