--- a/dev/scss/blocks/_shop.scss
+++ b/dev/scss/blocks/_shop.scss
@@ -71,9 +71,13 @@
     &-title,
     &-address,
     &-time,
-    &-phone {
+    &-phone{
         font-family: 'SFProDisplay', 'Arial', sans-serif;
         padding: 0 15px
+    }
+
+    .show-on--map {
+        margin: 0 15px 
     }
 
     &-phone {
@@ -102,6 +106,10 @@
         font-size: 14px;
         text-align: left;
         margin: 0;
+        line-height: 20px;
+        position: relative;
+        width: 100px;
+        top: 25px;
     }
 }
 
@@ -126,13 +134,20 @@
 
 // растягиваю карту на весь экран без отступов
 @media screen and(max-width:480px) {
+    .page-inner--shop-map,
     #map {
-        margin-left: -20px;
-        margin-right: -20px;
-        width: calc(100% + 40px);
+        margin-left: -15px;
+        margin-right: -15px;
+        width: calc(100% + 30px);
     }
 
-    .filters-block-shops { 
+    .filters-block-shops {  
+        display: flex;
+        flex-direction: column-reverse;
+    }
+
+
+    .filters-block-wrapper { 
         display: flex;
         flex-direction: column-reverse;
     }
